--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-navigation/bottom-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/stack": "^6.3.10",
+    "@unleash/proxy-client-react": "^3.5.2",
     "axios": "^1.2.2",
     "expo": "~47.0.9",
     "expo-status-bar": "~1.4.2",
@@ -23,7 +24,8 @@
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
     "react-native-web": "~0.18.9",
-    "react-uuid": "^2.0.0"
+    "react-uuid": "^2.0.0",
+    "unleash-proxy-client": "^2.4.3"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
