--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@react-navigation/stack": "^6.3.10",
     "axios": "^1.2.2",
     "expo": "~47.0.9",
+    "expo-localization": "^14.1.1",
     "expo-status-bar": "~1.4.2",
     "i18next": "^22.4.14",
+    "i18next-http-backend": "^2.2.0",
     "react": "18.1.0",
     "react-dom": "18.1.0",
-    "react-native": "0.70.5",
+    "react-i18next": "^12.2.0",
+    "react-native": "^0.70.5",
     "react-native-gesture-handler": "^2.8.0",
     "react-native-safe-area-context": "4.4.1",
     "react-native-screens": "~3.18.0",
